# phonon-flow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml.bak
examples/: quick_phonon.py  si_phonon.yaml
phonon_flow/: __init__.py  cli.py  config.py  constants.py  exceptions.py
phonon_flow/backends/: __init__.py  base.py  hpc_slurm.py  local.py
phonon_flow/knowledge/: __init__.py  ima_client.py
phonon_flow/phonon/: __init__.py  bands.py  raman.py  workflow.py
phonon_flow/phonon/templates/: __init__.py
phonon_flow/tests/: test_core.py
phonon_flow/utils/: __init__.py  plotting.py
